--- a/serverless.yml
+++ b/serverless.yml
@@ -8,11 +8,11 @@ provider:
   profile: serverless
   region: eu-west-2
 package:
-  artifact: target/hello-dev.jar
+  artifact: target/coeusnews-api-dev.jar
 
 functions:
   coeusnews-api:
-    handler: com.serverless.Handler
+    handler: com.coeusnews.Handler
     events:
       - http:
           path: coeusnews
