--- a/serverless.yml
+++ b/serverless.yml
@@ -17,3 +17,9 @@ functions:
       - http:
           path: /{category}/coeusnews
           method: get
+  save-coeusnews-api:
+    handler: com.coeusnews.SaveCoeusnewsHandler
+    events:
+      - http:
+          path: /{category}/coeusnews
+          method: post
