Unit testing implemented
Co-Authored-By: AlieuBSagnia <48827855+AlieuBSagnia@users.noreply.github.com>
Co-Authored-By: sharada Telkar  <79594580+sharada-sudo@users.noreply.github.com>

--- a/serverless.yml
+++ b/serverless.yml
@@ -42,6 +42,6 @@ functions:
     handler: com.coeusnews.SaveCoeusnewsHandler
     events:
       - http:
-          path: /coeusnews/{title}
+          path: /coeusnews/{title}/saveArticle
           method: post
           cors: true
